--- a/.streamlit/secrets.example.toml
+++ b/.streamlit/secrets.example.toml
@@ -1,6 +1,19 @@
+debug = true
 ret2shell_url = ""
 
 [flag.neuro]
+salt = ""
+prefix = ""
+
+[flag.evil]
+salt = ""
+prefix = ""
+
+[flag.complete]
+salt = ""
+prefix = ""
+
+[flag.complete_rev]
 salt = ""
 prefix = ""
 
@@ -8,6 +21,7 @@ prefix = ""
 base_url = ""
 api_key = ""
 model = ""
+completion_model = ""
 
 [connections.db]
 url = "sqlite:///database/database.db"
